2009-12-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, src/filetypes.h:
   Make group for custom filetypes.
 * data/filetypes.Genie.conf, data/filetype_extensions.conf:
   Add custom filetype Genie.


2009-12-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Highlight D & Java types from a global tags file.
 * src/highlighting.c, doc/geany.txt, doc/geany.html:
   Add debug message warning if recursive lexer_filetype is set.
 * src/highlighting.c, src/sciwrappers.c, src/sciwrappers.h:
   Remove duplicate sci_set_keywords(), make argument const.
 * src/highlighting.c:
   Only show debug message once if recursive lexer_filetype is set.
   Tidy highlighting_init_styles code for filetype None handling.
 * scintilla/makefile.win32, scintilla/KeyWords.cxx,
   scintilla/LexVerilog.cxx, scintilla/Makefile.am, src/highlighting.c,
   src/filetypes.c, src/filetypes.h, src/symbols.c, THANKS,
   tagmanager/parsers.h, tagmanager/makefile.win32,
   tagmanager/verilog.c, tagmanager/Makefile.am,
   data/filetypes.verilog, data/filetype_extensions.conf, wscript:
   Apply patch from Kelvin Gardiner to add Verilog filetype (thanks).
 * src/highlighting.c:
   Fix segfault on startup (oops).
 * data/filetypes.verilog:
   Fix using common style colours for Verilog.


2009-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, data/filetypes.cpp, data/filetypes.vala,
   data/filetypes.glsl, data/filetypes.cs, data/filetypes.c:
   Move C-like filetype properties into configuration files.
 * src/highlighting.c, data/filetypes.cpp, data/filetypes.cs,
   data/filetypes.c:
   Remove now unnecessary "styling_within_preprocessor" C style key.
 * src/highlighting.c, data/filetypes.cpp, data/filetypes.vala,
   data/filetypes.glsl, data/filetypes.cs:
   Use lexer_filetype=C configuration file key instead of duplicate
   styleset functions for C++, C#, GLSL, Vala.

