@@ -1,38 +1,61 @@
-Summary:       A fast and lightweight IDE using GTK2
+# Note: This spec file is very basic to provide functionality
+# on all known RPM based distributions.
+# It's stronly recommended to use packages of your own distributor
+
 Name:          geany
 Version:       @VERSION@
 Release:       1
-License:       GPL2
+Summary:       A fast and lightweight IDE using GTK2
+
 Group:         Development/Tools
-Vendor:        The Geany developer team <info@geany.org>
-Packager:      Dominic Hopf <dmaphy@gmail.com>
-Source:        http://download.geany.org/%{name}-%{version}.tar.gz
+License:       GPLv2+
 URL:           http://www.geany.org/
-BuildRoot:     %{_tmppath}/%{name}-%{version}-%{release}-root
+Vendor:        The Geany developer team <info@geany.org>
+Packager:      Dominic Hopf <dmaphy@googlemail.com>
+Source:        http://download.geany.org/%{name}-%{version}.tar.bz2
+
+# The following tags files were retrieved 16th Aug 2009
+# You will have to download these and put them into your rpmbuild/SOURCES directory,
+# otherwise comment these lines out
+Source1:   http://download.geany.org/contrib/tags/sqlite3.c.tags
+Source2:   http://download.geany.org/contrib/tags/std.glsl.tags
+Source3:   http://download.geany.org/contrib/tags/gtk218.c.tags
+Source4:   http://download.geany.org/contrib/tags/xfce46.c.tags
+Source5:   http://download.geany.org/contrib/tags/dbus-glib-0.76.c.tags
+Source6:   http://download.geany.org/contrib/tags/standard.css.tags
+Source7:   http://download.geany.org/contrib/tags/geany-api-0.18.c.tags
+Source8:   http://download.geany.org/contrib/tags/std.vala.tags
+
+BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Requires:      glib2, gtk2, pango
-BuildRequires: glib2-devel, gtk2-devel, pango-devel
+BuildRequires: glib2-devel, gtk2-devel, pango-devel, gettext, intltool
 
 %description
-Geany is a small and lightweight Integrated Development Environment. It
-was developed to provide a small and fast IDE, which has only a few
-dependencies from other packages. Another goal was to be as independent
-as possible from a special Desktop Environment like KDE or GNOME -
-Geany only requires the GTK2 runtime libraries.
+Geany is a small and fast integrated development enviroment with basic
+features and few dependencies to other packages or Desktop Environments.
 
-Some basic features of Geany:
-
+Some features:
 - Syntax highlighting
+- Code completion
 - Code folding
-- Symbol name auto-completion
 - Construct completion/snippets
 - Auto-closing of XML and HTML tags
 - Call tips
-- Many supported filetypes including C, Java, PHP, HTML, Python, Perl, Pascal, and others
-- Symbol lists
+- Support for Many languages like C, Java, PHP, HTML, Python, Perl, Pascal
+- symbol lists and symbol name auto-completion
 - Code navigation
-- Build system to compile and execute your code
 - Simple project management
 - Plugin interface
+
+%package devel
+Summary:   Header files for building Geany plug-ins
+Group:     Development/Tools
+Requires:  geany = %{version}-%{release}
+Requires:  pkgconfig gtk2-devel
+
+%description devel
+This package contains the header files and pkg-config file needed for building
+Geany plug-ins. You do not need to install this package to use Geany.
 
 %prep
 %setup -q
@@ -51,22 +74,30 @@ Some basic features of Geany:
 
 %__rm -f $RPM_BUILD_ROOT%{_datadir}/icons/hicolor/icon-theme.cache
 
+# Install tags files
+# comment the following two lines out if you didn't download the tags files mentioned
+# above
+mkdir -p $RPM_BUILD_ROOT%{_datadir}/%{name}/tags/
+install -p %{SOURCE1} %{SOURCE2} %{SOURCE3} %{SOURCE4} %{SOURCE5} %{SOURCE6} %{SOURCE7} %{SOURCE8} $RPM_BUILD_ROOT%{_datadir}/%{name}/tags/
+
 %clean
 %__rm -Rf $RPM_BUILD_ROOT
 
 %files
-%defattr(-, root, root)
-%doc AUTHORS COPYING ChangeLog HACKING INSTALL NEWS README TODO THANKS
+%defattr(-, root, root, -)
+%doc %{_datadir}/doc/%{name}/*
+%doc %{_mandir}/man1/%{name}.1.gz
+
 %{_bindir}/%{name}
-%{_libdir}/%{name}/
 %{_datadir}/%{name}
+%{_libdir}/%{name}
 %{_datadir}/applications/%{name}.desktop
 %{_datadir}/locale/*/LC_MESSAGES/%{name}.mo
-%{_datadir}/icons/48x48/%{name}.png
-%{_datadir}/doc/%{name}/
-%{_mandir}/man1/%{name}.1.gz
 %{_datadir}/icons/hicolor/16x16/apps/*.png
 %{_datadir}/icons/hicolor/48x48/apps/*.png
 %{_datadir}/icons/hicolor/scalable/apps/*.svg
-%{_includedir}/%{name}/
-%{_libdir}/pkgconfig/
+
+%files devel
+%defattr(-, root, root, -)
+%{_includedir}/geany
+%{_libdir}/pkgconfig/geany.pc
