@@ -1,3 +1,11 @@
+2009-12-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * geany.spec.in:
+   Improve geany.spec (split the package into a binary and devel
+   package, update BuildRequires and other minor improvements).
+   Patch by Dominic Hopf, thanks.
+
+
 2009-12-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/filetypes.c, src/filetypes.h:
